<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/header"
        layout="@layout/header" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employer_name"
        android:contentDescription="employer name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/employer_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employer_phone"
        android:contentDescription="employer phone number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/employer_phone_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/employer_name"
        app:layout_constraintTop_toBottomOf="@id/employer_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/employerAddress"
        android:contentDescription="employer address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/employer_address_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/employer_phone"
        app:layout_constraintTop_toBottomOf="@id/employer_phone" />

    <include
        android:id="@+id/footer"
        layout="@layout/footer" />

</androidx.constraintlayout.widget.ConstraintLayout>