...
        app:singleSelection="false"
        app:selectionRequired="false"
        app:layout_constraintStart_toStartOf="@+id/loan_options"
        app:layout_constraintTop_toBottomOf="@+id/loan_options">

        <com.google.android.material.chip.Chip
            android:id="@+id/insChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="Insurance" />

        <com.google.android.material.chip.Chip
            android:id="@+id/ptsChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.Chip.Filter"
            android:text="Points" />

        <com.google.android.material.chip.Chip
...
        android:layout_marginTop="30dp"
        android:text="Loan Amount"
        app:layout_constraintStart_toStartOf="@+id/chipGroup"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <SeekBar
        android:id="@+id/loan_amount_scrubber"
        android:contentDescription="loan amount indicator"
        android:layout_width="335dp"
        android:layout_height="21dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/loan_amount"
        app:layout_constraintTop_toBottomOf="@+id/loan_amount" />
...
